Updated homer config and compressed assets

--- a/homer/dashboard/config.yml
+++ b/homer/dashboard/config.yml
@@ -31,6 +31,7 @@ colors:
     text-title: "#fafafa"
     text-subtitle: "#f5f5f5"
     card-shadow: rgba(0, 0, 0, 0.4)
+    link: "#ffffff"
     link-hover: "#ffdd57"
 
 links:
@@ -38,64 +39,21 @@ links:
     icon: "fab fa-github"
     url: "https://kanth.tech/github"
     target: "_blank" # optional html a tag target attribute
-  - name: "Website"
-    icon: "fas fa-globe"
-    url: "https://thekrishna.in/"
+  - name: "Intranet Root CA Certificate"
+    icon: "fas fa-award"
+    url: "http://cdn.adam.home/files/certificates/keks_intra_ca.crt"
+  - name: "Local CDN"
+    icon: "fas fa-shipping-fast"
+    url: "https://cdn.adam.home/"
 
 # Services
 services:
   - name: "Applications"
-    icon: "fas fa-rocket"
-    items:
-      - name: "Portainer"
-        logo: "assets/tools/portainer.svg"
-        subtitle: "Container Management Tool"
-        tag: "remote"
-        url: "https://portainer.adam.home/"
-        target: "_blank" # optional html a tag target attribute
-      - name: "Secrets Manager"
-        icon: "fas fa-key"
-        subtitle: "Secret Management Service"
-        tag: "remote"
-        url: "https://secrets.adam.home/api"
-        target: "_blank" # new tab
-      - name: "Pi-Hole"
-        logo: "assets/tools/pihole.svg"
-        subtitle: "DNS sinkhole and Ad-Blocker"
-        url: "https://pi.hole/admin"
-        # type: "PiHole"
-        tag: "local"
-      - name: "NGINX Proxy Manager"
-        logo: "assets/tools/nginx.svg"
-        subtitle: "Proxy and SSL Management"
-        tag: "app"
-        url: "https://npm.adam.home/"
- #     - name: "Home Assistant"
- #       logo: "assets/tools/homeassistant.svg"
- #       subtitle: "Home Automation"
- #       tag: "app"
- #       url: "http://192.168.1.29:8123/"
-
-  - name: "Printer and Scanner"
-    icon: "fas fa-print"
-    items:
-      - name: "CUPS"
-        logo: "assets/tools/printer.svg"
-        subtitle: "Printer Server Management Interface"
-        tag: "printer"
-        url: "https://192.168.1.29:631/"
-      - name: "Scanner"
-        logo: "assets/tools/scanner.png"
-        subtitle: "Web Interface for Scanner"
-        tag: "printer"
-        url: "https://scanner.adam.home/"
-
-  - name: "Cloud"
     icon: "fas fa-cloud"
     items:
       - name: "NextCloud"
         logo: "assets/tools/nextcloud.svg"
-        subtitle: "Personal Cloud"
+        subtitle: "Private file storage server."
         tag: "cloud"
         url: "https://cloud.formatlabs.in/"
       - name: "WireGuard"
@@ -103,9 +61,69 @@ services:
         subtitle: "VPN to connect to the intranet"
         tag: "cloud"
         url: "https://wg.gemini.home/"
+      - name: "Gotify"
+        logo: "assets/tools/gotify.png"
+        subtitle: "Server for sending and receiving notifications"
+        tag: "local"
+        url: "https://gotify.adam.home/"
+      - name: "Home Assistant"
+        logo: "assets/tools/homeassistant.svg"
+        subtitle: "Private home automation server"
+        tag: "local"
+        url: "https://assistant.adam.home/"
+
+  - name: "Tools"
+    icon: "fas fa-tools"
+    items:
+      - name: "Portainer"
+        logo: "assets/tools/portainer.svg"
+        subtitle: "Container management tool"
+        tag: "tool"
+        url: "https://portainer.adam.home/"
+        target: "_blank" # optional html a tag target attribute
       - name: "Duplicati"
         logo: "assets/tools/duplicati.png"
-        subtitle: "Secure Backup Manager"
-        tag: "cloud"
+        subtitle: "Secure backup and recovery management"
+        tag: "tool"
         url: "https://backups.gemini.home/"
+      - name: "Secrets Manager"
+        icon: "fas fa-key"
+        subtitle: "Secret management service"
+        tag: "tool"
+        url: "https://secrets.adam.home/api"
+        target: "_blank" # new tab
 
+
+  - name: "Printer and Scanner"
+    icon: "fas fa-paper-plane"
+    items:
+      - name: "CUPS"
+        icon: "fas fa-print"
+        color: "#ffffff"
+        subtitle: "Printer server management interface"
+        tag: "printer"
+        url: "https://192.168.1.29:631/"
+      - name: "Scanner"
+        logo: "assets/tools/scanner.png"
+        subtitle: "Web interface for scanner"
+        tag: "printer"
+        url: "https://scanner.adam.home/"
+
+  - name: "Network Management"
+    icon: "fas fa-network-wired"
+    items:
+      - name: "Pi-Hole #1 (adam)"
+        logo: "assets/tools/pihole.svg"
+        subtitle: "Primary DNS (192.168.1.29)"
+        url: "https://dns.adam.home/admin"
+        tag: "net"
+      - name: "Pi-Hole #2 (gemini)"
+        logo: "assets/tools/pihole.svg"
+        subtitle: "Secondary DNS (192.168.1.73)"
+        url: "https://dns.gemini.home/admin"
+        tag: "net"
+      - name: "NGINX Proxy Manager"
+        logo: "assets/tools/nginx.svg"
+        subtitle: "Reverse proxy and SSL management"
+        tag: "net"
+        url: "https://npm.adam.home/"
